--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
+    "ion-rangeslider": "^2.3.1",
     "jquery": "^3.5.1",
     "jquery-ui": "^1.12.1"
   }
